# bright_network_challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
job_recommendation/: candidate_data_parser.py  http_client.py  matching_algorithm.py  models.py
tests/: test_candidate_data_parser.py  test_http_client.py  test_matching_algorithm.py
